src/test/data/psi_tree/valid_contracts/comments.tz
# comment
# comment
parameter unit;
# comment
# comment
storage unit;
# comment
# comment
code {};
# comment