src/test/data/psi_tree/syntax_errors/empty_instructions.tz
parameter unit;
storage unit;
# a single empty instruction, i.e. '{ ; }' is valid syntax, two are invalid
code { ; ; };
